<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Ejercicio 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="20dp"
            tools:context=".Ejercicio1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_eje_1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_eje_2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_eje_2" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_eje_3"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_eje_3"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 4-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="20dp"
            android:orientation="vertical"
            tools:context=".Ejercicio4">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_eje_4"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_eje_42"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 5-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio5">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_eje_5"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_eje_5"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 6-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio6">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_para"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <EditText
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/txt_mensaje"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/btn_enviar"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 7-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/text_off"
                    android:textOn="@string/text_on" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/text_off"
                    android:textOn="@string/text_on" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/txt_switch"
                android:textOff="@string/text_off"
                android:textOn="@string/text_on" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 8-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pregunta"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/txt_caliente"
                android:textOff="@string/txt_frio"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_leche"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_azucar"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_limon"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 9-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".Ejercicio9">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sp_opciones"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700" />

        <!--Ejercicio 10-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="20dp"
            android:orientation="vertical"
            tools:context=".Ejercicio10">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dr_check"
                android:contentDescription="@string/txt_chulo" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dr_close"
                android:contentDescription="@string/txt_error"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>